--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ h1 {
     border-bottom : 1px solid darkgray;
     margin : 0;
     padding: 20px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 ol {
     border-right : 1px solid darkgray;
@@ -32,6 +34,9 @@ ol {
 #article {
     padding: 30px;
     padding-top: 5px;
+}
+#article a{
+    color:blue;
 }
 @media(max-width:800px){
     #grid {
