--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,7 @@ ol {
     padding-right: 240px;
 }
 #menu a {
-    color: aliceblue;
-    border-color: aliceblue;
+    color: darkkhaki;
     border-right: 1px solid;
     padding-right: 5px;
 }
